<resources>
    <string name="app_name">StarWarsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_connection_title">Connection Error</string>
    <string name="error_connection_message">Error you need a internet connection to use the App</string>
    <string name="ok">OK</string>

    <!--Filters-->
    <string name="filter_by_date">By Release Date</string>
    <string name="filter_by_history">By Movie History</string>
    <string name="see_details">See Details</string>
    <string name="release_date">Release Date:&#160;</string>
    <string name="director">Director:&#160;</string>
    <string name="producer">Producer:&#160;</string>
    <string name="characters">Characters</string>
    <string name="planets">Planets</string>
    <string name="species">Species</string>
    <string name="ships">Ships</string>
    <string name="films">Films</string>
    <string name="we_can_t_show_you_any_information_yet_ensure_you_have_internet_connection_and_restart_the_app">We can\'t show you any information yet, ensure you have internet connection and try again</string>
    <string name="ops_we_can_t_get_the_list_of_movies_right_now">Ops. We can\'t get the list of movies right now</string>
    <string name="birth_year">Birth Year:&#160;</string>
    <string name="gender">Gender:&#160;</string>
    <string name="climate">Climate:&#160;</string>
    <string name="terrain">Terrain:&#160;</string>
    <string name="notSynced">There are some data not synced, check your internet connection and refresh the list to the get the latest info</string>
    <string name="clasification">Clasification:</string>
    <string name="language">Language:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="crew">Crew:</string>
</resources>