<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieEntity"
            type="com.example.starwarsapp.data.local.models.MovieEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movieDetail.view.MovieDetailFragment">

        <ImageView
            android:id="@+id/movieBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/attack_of_the_clones" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:padding="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{movieEntity.title}"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        tools:text="Start wars movie" />

                    <ScrollView
                        android:id="@+id/scroll_opCrawl"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:paddingVertical="20dp">

                        <TextView
                            android:id="@+id/tv_opCrawl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{movieEntity.openingCrawl}"
                            android:textAlignment="center"
                            android:textColor="@color/yellow"
                            android:textSize="20sp"
                            tools:text="opening crawl fjkdlfsa" />
                    </ScrollView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{movieEntity.releaseDate}"
                            android:textColor="@color/white2"
                            android:textStyle="italic"
                            tools:text="1980" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/director"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{movieEntity.director}"
                            android:textColor="@color/white2"
                            android:textStyle="italic"
                            tools:text="George Lucas" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/producer"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{movieEntity.producer}"
                            android:textColor="@color/white2"
                            android:textStyle="italic"
                            tools:text="George Lucas" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@android:color/transparent"
                    app:tabTextColor="@color/white2"
                    app:tabSelectedTextColor="@color/yellow"
                    app:tabTextAppearance="@style/MineCustomTabText"
                    app:tabIndicatorColor="@color/yellow"
                    >

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tab1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/characters"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tab2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/planets" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tab3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/species" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tab4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ships" />
                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/fragmentsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/tabs"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>